# eye-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/src/: camera_calibrator.cpp  camera_calibrator.hpp  control_task.cpp  control_task.hpp  video_capture.cpp  video_capture.hpp  virtual_scene.cpp  virtual_scene.hpp  virtual_scene_task.cpp
app/src/calibration/: camera_calibrator.cpp  camera_calibrator.hpp  face_model_points_calibration.cpp  face_model_points_calibration.hpp
app/src/estimators/: eye_ellipse_fitter.cpp  eye_ellipse_fitter.hpp  face_shape_predictor.cpp  face_shape_predictor.hpp  global_gaze_estimator.cpp  global_gaze_estimator.hpp
app/src/frame_capture_entity/: frame_capture_entity.hpp  picture_capture_entity.cpp  picture_capture_entity.hpp  video_capture_entity.cpp  video_capture_entity.hpp
app/src/input_control/: input_control_task.cpp  input_control_task.hpp
app/src/local_gaze_vector/: local_gaze_vector_task.cpp  local_gaze_vector_task.hpp
app/src/logging/: fmt_thread_id.hpp  log_level_flag.cpp  log_level_flag.hpp  logger.cpp  logger.hpp  thread_name_flag.cpp  thread_name_flag.hpp
app/src/mouse_control/: mouse_control_task.cpp  mouse_control_task.hpp
app/src/pose_estimation/: head_pose_estimation_task.cpp  head_pose_estimation_task.hpp
app/src/predictors/: eye_gaze_tracker.cpp  eye_gaze_tracker.hpp  face_shape_predictor.cpp  face_shape_predictor.hpp
app/src/sfm/: sfm.cpp  sfm.hpp
app/src/shared_messages/: shared_message.hpp
app/src/tasks/: dummy_task.cpp  dummy_task.hpp  message_dispatcher.cpp  message_dispatcher.hpp  package_task.cpp  package_task.hpp  super_dummy_task.cpp  super_dummy_task.hpp  task.cpp  task.hpp  thread_pool.cpp  thread_pool.hpp
app/src/utils/: assert.cpp  assert.hpp  cast.hpp  file_proc.cpp  files_proc.hpp  string.cpp  string.hpp
app/src/virtual_scene/: virtual_scene_task.cpp  virtual_scene_task.hpp
data/: shape_predictor_68_face_landmarks.dat:Zone.Identifier
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
